--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.469.0",
+    "motion": "^11.16.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
