--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^11.16.4",
     "lucide-react": "^0.469.0",
     "motion": "^11.16.1",
     "react": "^18.3.1",
