--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-intersection-observer": "^9.15.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^7.1.1",
+    "react-scroll-parallax": "^3.4.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
