--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^11.16.4",
     "lucide-react": "^0.469.0",
     "motion": "^11.16.1",
+    "radix-ui": "^1.1.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
