--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-intersection-observer": "^9.15.0",
     "react-parallax": "^3.5.1",
