--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^11.16.4",
     "lucide-react": "^0.469.0",
     "motion": "^11.16.1",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -42,6 +43,7 @@
     "react-parallax": "^3.5.1",
     "react-router-dom": "^7.1.1",
     "react-scroll-parallax": "^3.4.5",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
