--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.5.2",
