--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.16.4",
     "lucide-react": "^0.469.0",
-    "motion": "^11.16.1",
+    "motion": "^11.18.2",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -53,6 +53,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@babel/preset-flow": "^7.25.9",
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
