--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.39.0",
     "vite": "^6.0.5"
   }
 }
